--- a/src/variables.scss
+++ b/src/variables.scss
@@ -7,7 +7,8 @@ $Slate        : #8892b0;
 $LightSlate   : #a8b2d1;
 $LightestSlate: #0d0e12;
 $White        : #191e25;
-$Green        : #40af95;
+$Green        : #7196e9;
+$GreenOld        : #40af95;
 $GreenOpacity : rgba(100,255,218,0.07);
 $NavyBack : #274264;
 $NavyText : rgb(9, 71, 112);
