--- a/src/app/components/home/about/about.component.html
+++ b/src/app/components/home/about/about.component.html
@@ -6,6 +6,7 @@
                 <div class="col-md-6">
                     <h1 >{{ "AboutPioneers.Title" | translate }}</h1>
                     <p class="mb-2 mx-2">{{ "WhoWeAre.Content" | translate }}</p>
+                    <h4><a [routerLink]="'/about'">{{ "WhoWeAre.ReadMore" | translate }} </a> </h4>
                 </div>
                 <div class="col-md-6">
                     <img [src]="'WhoWeAre.Image' | translate" class="img-fluid" alt="{{ 'WhoWeAre.Title' | translate }}">
