--- a/src/app/components/home/full-about/full-about.component.html
+++ b/src/app/components/home/full-about/full-about.component.html
@@ -1,8 +1,8 @@
 <!-- <div class="empty-space"></div> -->
 <div class="jobs" [dir]="'Direction' | translate">
-    <div class="container">
+    <div class="container"  data-aos="fade-up" data-aos-duration="1000">
         <div class="container" [dir]="'Direction' | translate">
-            <span class="section-title">{{ "Header.Item2" | translate }}</span>
+            <span class="section-title">{{ "AboutUS.Title" | translate }}</span>
           </div>
         <div class="jobs-inner about-details">
             <div class="row mx-2">
