--- a/src/app/components/general/footer/footer.component.scss
+++ b/src/app/components/general/footer/footer.component.scss
@@ -1,149 +1,175 @@
 @import "./../../../../variables.scss";
+
 .footer {
-    background-color: #1A3A5A; 
-    padding: 45px 0;
+    background-color: #1A3A5A;
+    position: relative;
+    background-image: url('/assets/images/footer-bg.png');
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    padding: 45px 0 0 0;
     color: #ffffff;
     font-family: $CodeFont !important;
-    .container {
-      max-width: 1200px;
-      margin: 0 auto;
-    }
-  
-    .footer-logo {
-      width: 150px;
-      margin-bottom: 20px;
-    }
-  
-    .footer-title {
-      font-size: 18px;
-      font-weight: bold;
-      margin: 30px 0px;
-      
-    }
-  
-    .footer-contact-info {
-      list-style: none;
-      padding: 0;
-      margin: 0;
-  
-      li {
-        margin-bottom: 10px;
-  
-        i {
-          margin-right: 10px;
-          margin-left: 10px;
-        }
-        a {
-          color: #ffffff;
-         
-    
-          &:hover {
-            text-decoration: underline;
-          }
-        }
-      }
-    }
-  
-    .footer-links-container {
-      display: flex;
-      flex-wrap: wrap;
-      gap: 20px;
-    }
-  
-    .footer-links {
-      list-style: none;
-      padding: 0;
-      margin: 0;
-      flex: 1;
-  
-      a {
-        color: #ffffff;
-        text-decoration: none;
-        margin-bottom: 10px;
-        display: block;
-  
-        &:hover {
-          text-decoration: underline;
-        }
-      }
-    }
-  
-    .footer-social-icons {
-      margin-top: 20px;
-  
-      a {
-        color: #ffffff;
-        margin-right: 15px;
-        font-size: 18px;
-  
-        &:hover {
-          color: #1E90FF; 
-        }
-      }
-    }
-  
-    .footer-contact-form {
-      input, textarea {
+
+    &::before {
+        content: '';
+        position: absolute;
+        top: 0;
+        left: 0;
         width: 100%;
-        padding: 10px;
-        margin-bottom: 10px;
-        background-color: #f5f5f5;
-        border: none;
-        border-radius: 5px;
-      }
-  
-      button {
-        background-color: #003366;
-        color: #ffffff;
-        padding: 10px 20px;
-        border: none;
-        border-radius: 5px;
-        cursor: pointer;
-  
-        &:hover {
-          background-color: #1E90FF;
-        }
-      }
+        height: 100%;
+        background-color: rgba(70, 109, 148, 0.9);
+        z-index: 1;
     }
-  
-    @media (max-width: 768px) {
-      .footer {
-        padding: 40px 20px;
-      }
-      .footer-title {
-        margin-top: 10px;
-      }
-      .footer-contact-info, .footer-links, .footer-contact-form {
-        text-align: center;
-      }
-  
-      .footer-contact-form {
-        button {
-          width: 100%;
+
+    .container {
+        max-width: 1200px;
+        margin: 0 auto;
+        position: relative;
+        z-index: 2;
+    }
+
+    .footer-logo {
+        width: 150px;
+        margin-bottom: 20px;
+    }
+
+    .footer-title {
+        font-size: 18px;
+        font-weight: bold;
+        margin: 30px 0px;
+    }
+
+    .footer-contact-info {
+        list-style: none;
+        padding: 0;
+        margin: 0;
+
+        li {
+            margin-bottom: 10px;
+
+            i {
+                margin-right: 10px;
+                margin-left: 10px;
+            }
+
+            a {
+                color: #ffffff;
+
+                &:hover {
+                    text-decoration: underline;
+                }
+            }
         }
-      }
-  
-      .footer-social-icons {
-        text-align: center;
-  
+    }
+
+    .footer-links-container {
+        display: flex;
+        flex-wrap: wrap;
+        gap: 20px;
+    }
+
+    .footer-links {
+        list-style: none;
+        padding: 0;
+        margin: 0;
+        flex: 1;
+
         a {
-          margin-bottom: 10px;
+            color: #ffffff;
+            text-decoration: none;
+            margin-bottom: 10px;
+            display: block;
+
+            &:hover {
+                text-decoration: underline;
+            }
         }
-      }
-  
-      .footer-links-container {
-        flex-direction: column;
-        align-items: center;
-      }
     }
-  }
-  
-  [dir="rtl"] {
+
+    .footer-social-icons {
+        margin-top: 20px;
+
+        a {
+            color: #ffffff;
+            margin-right: 15px;
+            font-size: 18px;
+
+            &:hover {
+                color: #1E90FF;
+            }
+        }
+    }
+
+    .footer-contact-form {
+        input,
+        textarea {
+            width: 100%;
+            padding: 10px;
+            margin-bottom: 10px;
+            background-color: #f5f5f5;
+            border: none;
+            border-radius: 5px;
+        }
+
+        button {
+            background-color: #003366;
+            color: #ffffff;
+            padding: 10px 20px;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+
+            &:hover {
+                background-color: #1E90FF;
+            }
+        }
+    }
+
+    @media (max-width: 768px) {
+        .footer {
+            padding: 40px 20px;
+        }
+
+        .footer-title {
+            margin-top: 10px;
+        }
+
+        .footer-contact-info,
+        .footer-links,
+        .footer-contact-form {
+            text-align: center;
+        }
+
+        .footer-contact-form {
+            button {
+                width: 100%;
+            }
+        }
+
+        .footer-social-icons {
+            text-align: center;
+
+            a {
+                margin-bottom: 10px;
+            }
+        }
+
+        .footer-links-container {
+            flex-direction: column;
+            align-items: center;
+        }
+    }
+
+    .footer-bottom {
+        background-color: black;
+        padding: 20px 0;
+        margin-top: 2%;
+    }
+}
+
+[dir="rtl"] {
     text-align: right;
     font-family: $MainFont;
-    font-weight: 800
-  }
-  
-
-
-  
+    font-weight: 800;
+}
